--- a/app/assets/scss/4-pages/_introduce.scss
+++ b/app/assets/scss/4-pages/_introduce.scss
@@ -44,7 +44,7 @@
         max-width: unset;
         padding: 0;
 
-        .section-primary-list {
+        .card-list {
           justify-content: center;
         }
       }
