--- a/app/assets/scss/4-pages/_no18.scss
+++ b/app/assets/scss/4-pages/_no18.scss
@@ -44,7 +44,7 @@
         max-width: unset;
         padding: 0;
 
-        .section-primary-list {
+        .card-list {
           justify-content: center;
         }
       }
@@ -75,7 +75,7 @@
       }
     }
 
-    .notification-tertinary {
+    .notification-tertiary {
       .notification-panel1 {
         .notification-panel1-body {
           padding: 0;
@@ -89,7 +89,7 @@
     }
   }
 
-  .section-tertinary {
+  .section-tertiary {
     padding: 70px 0;
     text-align: center;
     background-color: #fff;
@@ -145,7 +145,7 @@
       .qa-content {
         flex: 1;
 
-        .ttl-tertinary {
+        .ttl-tertiary {
           text-align: left;
           font-size: 20px;
         }
