--- a/app/pages/introduce/index.njk
+++ b/app/pages/introduce/index.njk
@@ -33,7 +33,7 @@
 
       <div class="section-primary-wrapper">
         <div class="containers">
-          <ul class="flex gap30 section-primary-list">
+          <ul class="flex gap30 card-list">
             <li class="card-type6">
               <a href="#" class="card">
                 <div class="ttl-quaternary-container">
@@ -228,7 +228,7 @@
                       アメリカン・エキスプレス®・カード</h3>
 
                     <div class="credit-card">
-                      <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image" class="card-img">
+                      <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image" class="credit-card-img">
                     </div>
                   </div>
 
@@ -251,7 +251,7 @@
                     <h3 class="ttl-terianry centered-text">セゾンゴールド・ビジネス プロ・カード</h3>
 
                     <div class="credit-card">
-                      <img src="/assets/img/credit_cards/saison-01.png" alt="Your Image" class="card-img">
+                      <img src="/assets/img/credit_cards/saison-01.png" alt="Your Image" class="credit-card-img">
                     </div>
                   </div>
 
@@ -274,7 +274,7 @@
                     <h3 class="ttl-terianry centered-text">セゾン・アメリカン・エキスプレス®・ビジネス プロ・パーチェシング・カード</h3>
 
                     <div class="credit-card">
-                      <img src="/assets/img/credit_cards/saison-02.png" alt="Your Image" class="card-img">
+                      <img src="/assets/img/credit_cards/saison-02.png" alt="Your Image" class="credit-card-img">
                     </div>
                   </div>
 
@@ -359,7 +359,7 @@
             <dd>経費清算クラウド「Concur Expense」は、法人カード、交通系ICカード（スイカ、パスモなど）、ホテル手配やタクシー配車アプリなど様々なサービスと連携。経費明細が自動で Concur Expense に取り込まれるので、ペーパーレス化はもちろん経費精算を自動化することができます。</dd>
 
             <div class="cash-flow-img">
-              <img src="/assets/img/introduce_page/cash-flow.png" alt="Your Image" class="card-img">
+              <img src="/assets/img/introduce_page/cash-flow.png" alt="Your Image" class="credit-card-img">
             </div>
           </div>
 
