--- a/app/pages/no18/index.njk
+++ b/app/pages/no18/index.njk
@@ -33,7 +33,7 @@
 
       <div class="section-primary-wrapper">
         <div class="containers">
-          <ul class="flex gap30 inherit section-primary-list">
+          <ul class="flex gap30 inherit card-list">
             <li class="card-type6">
               <a href="#" class="card">
                 <div class="ttl-quaternary-container">
@@ -160,8 +160,8 @@
 
                 <div class="container">
                   <div class="flex gap20 card__box-wrapper">
-                    <div class="card__box-credit-card">
-                      <img src="/assets/img/credit_cards/american-express.png" alt="Your Image" class="card-img">
+                    <div class="credit-card02">
+                      <img src="/assets/img/credit_cards/american-express.png" alt="Your Image" class="credit-card-img">
                     </div>
 
                     <div class="card__box-title">
@@ -188,8 +188,8 @@
 
                 <div class="container">
                   <div class="flex gap20 card__box-wrapper">
-                    <div class="card__box-credit-card">
-                      <img src="/assets/img/credit_cards/saison-01.png" alt="Your Image" class="card-img">
+                    <div class="credit-card02">
+                      <img src="/assets/img/credit_cards/saison-01.png" alt="Your Image" class="credit-card-img">
                     </div>
 
                     <div class="card__box-title">
@@ -228,7 +228,7 @@
             <dd>「支払い.com」を利用すれば、期限の迫った請求書も、支払いまで最長60日余裕をプラス。資金繰りを改善し、借りずに事業を加速できます。 必要なのはお手持ちのカードだけ。審査も書類も必要ありません。</dd>
 
             <div class="cash-flow-img">
-              <img src="/assets/img/introduce_page/cash-flow.png" alt="Your Image" class="card-img">
+              <img src="/assets/img/introduce_page/cash-flow.png" alt="Your Image" class="credit-card-img">
             </div>
           </div>
 
@@ -236,7 +236,7 @@
         </div>
       </div>
 
-      <div class="notification-tertinary">
+      <div class="notification-tertiary">
         <div class="notification-panel1">
           <h2 class="card__ttl">課題：資金調達をしたい</h2>
 
@@ -261,8 +261,8 @@
 
                 <div class="container">
                   <div class="flex gap20 card__box-wrapper">
-                    <div class="card__box-credit-card">
-                      <img src="/assets/img/credit_cards/american-express.png" alt="Your Image" class="card-img">
+                    <div class="credit-card02">
+                      <img src="/assets/img/credit_cards/american-express.png" alt="Your Image" class="credit-card-img">
                     </div>
 
                     <div class="card__box-title">
@@ -271,8 +271,8 @@
                   </div>
 
                   <div class="flex gap20 card__box-wrapper">
-                    <div class="card__box-credit-card">
-                      <img src="/assets/img/credit_cards/american-express.png" alt="Your Image" class="card-img">
+                    <div class="credit-card02">
+                      <img src="/assets/img/credit_cards/american-express.png" alt="Your Image" class="credit-card-img">
                     </div>
 
                     <div class="card__box-title">
@@ -289,13 +289,13 @@
                   <div class="flex gap30 card__box-wrapper card__box__wrapper-right">
                     <div >
                       <dd>融資枠</dd>
-                      <h3 class="ttl-tertinary">最大950万円
+                      <h3 class="ttl-tertiary">最大950万円
                         <small>※1</small>
                       </h3>
                     </div>
                     <div >
                       <dd>金利</dd>
-                      <h3 class="ttl-tertinary">2.8％～9.6%
+                      <h3 class="ttl-tertiary">2.8％～9.6%
                         <small>※1</small>
                       </h3>
                     </div>
@@ -312,7 +312,7 @@
       </div>
     </section>
 
-    <section class="section-tertinary">
+    <section class="section-tertiary">
 
       <h2 class="ttl-secondary">各種サービス資料をまとめてダウンロード</h2>
 
@@ -389,7 +389,7 @@
         </div>
 
         <div class="qa-content">
-          <h3 class="ttl-tertinary">質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。</h3>
+          <h3 class="ttl-tertiary">質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。</h3>
         </div>
 
         <div class="qa-button">
@@ -408,7 +408,7 @@
         </div>
 
         <div class="qa-content">
-          <h3 class="ttl-tertinary">質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。</h3>
+          <h3 class="ttl-tertiary">質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。</h3>
         </div>
 
         <div class="qa-button">
@@ -426,7 +426,7 @@
         </div>
 
         <div class="qa-content">
-          <h3 class="ttl-tertinary">質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。</h3>
+          <h3 class="ttl-tertiary">質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。</h3>
         </div>
 
         <div class="qa-button">
@@ -445,7 +445,7 @@
         </div>
 
         <div class="qa-content">
-          <h3 class="ttl-tertinary">質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。</h3>
+          <h3 class="ttl-tertiary">質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。</h3>
         </div>
 
         <div class="qa-button">
@@ -464,7 +464,7 @@
         </div>
 
         <div class="qa-content">
-          <h3 class="ttl-tertinary">質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。</h3>
+          <h3 class="ttl-tertiary">質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。</h3>
         </div>
 
         <div class="qa-button">
@@ -483,7 +483,7 @@
         </div>
 
         <div class="qa-content">
-          <h3 class="ttl-tertinary">質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。</h3>
+          <h3 class="ttl-tertiary">質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。</h3>
         </div>
 
         <div class="qa-button">
