--- a/app/pages/quaternary/index.njk
+++ b/app/pages/quaternary/index.njk
@@ -151,8 +151,8 @@
 
                   <div class="container">
                     <div class="flex gap20 card__box-wrapper">
-                      <div class="card__box-credit-card">
-                        <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image" class="card-img">
+                      <div class="credit-card02">
+                        <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image" class="credit-card-img">
                       </div>
 
                       <div class="card__box-title">
@@ -178,8 +178,8 @@
 
                   <div class="container">
                     <div class="flex gap20 card__box-wrapper">
-                      <div class="card__box-credit-card">
-                        <img src="/assets/img/credit_cards/saison-01.png" alt="Your Image" class="card-img">
+                      <div class="credit-card02">
+                        <img src="/assets/img/credit_cards/saison-01.png" alt="Your Image" class="credit-card-img">
                       </div>
 
                       <div class="card__box-title">
@@ -222,7 +222,7 @@
                 <dd>「支払い.com」を利用すれば、期限の迫った請求書も、支払いまで最長60日余裕をプラス。資金繰りを改善し、借りずに事業を加速できます。 必要なのはお手持ちのカードだけ。審査も書類も必要ありません。</dd>
 
                <div class="cash-flow-img">
-                <img src="/assets/img/terinary_page/cash-flow.png" alt="Your Image" class="card-img">
+                <img src="/assets/img/terinary_page/cash-flow.png" alt="Your Image" class="credit-card-img">
                </div>
               </div>
             </section>
@@ -259,8 +259,8 @@
 
                         <div class="container">
                           <div class="flex gap20 card__box-wrapper">
-                            <div class="card__box-credit-card">
-                              <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image" class="card-img">
+                            <div class="credit-card02">
+                              <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image" class="credit-card-img">
                             </div>
 
                             <div class="card__box-title">
@@ -269,8 +269,8 @@
                           </div>
 
                           <div class="flex gap20 card__box-wrapper">
-                            <div class="card__box-credit-card">
-                              <img src="/assets/img/credit_cards/american-express-02.png" alt="Your Image" class="card-img">
+                            <div class="credit-card02">
+                              <img src="/assets/img/credit_cards/american-express-02.png" alt="Your Image" class="credit-card-img">
                             </div>
 
                             <div class="card__box-title">
