--- a/app/assets/scss/3-modules/_custom.scss
+++ b/app/assets/scss/3-modules/_custom.scss
@@ -25,129 +25,10 @@
     transform: translateX(-50%);
     border: 1px solid #000;
 
-    .card-img {
+    .credit-card-img {
       width: 170px;
       height: 107px;
     }
-  }
-}
-
-
-.table-primary {
-  table {
-    width: 1220px;
-    border-collapse: separate;
-    border-spacing: 10px;
-    margin-left: -10px;
-  }
-
-  th,
-  td {
-    padding: 8px;
-    text-align: left;
-    border: none;
-  }
-
-  th {
-    padding: 10px 12px;
-    background-color: black;
-    color: white;
-
-    div {
-      text-align: center;
-      justify-content: center;
-      align-items: center;
-      background-color: black;
-      color: white;
-      font-size: 16px;
-      font-weight: 400;
-      line-height: 1.6;
-    }
-  }
-
-  td {
-    padding: 20px 15px;
-    background-color: #fff;
-  }
-
-  td.table-data-primary {
-    .container {
-      display: block;
-      height: 180px;
-      margin-bottom: 0;
-
-      .ttl-senary {
-        font-size: 16px;
-        font-weight: 500;
-        text-align: center;
-        line-height: 1.3;
-      }
-
-      .ttl-septenary {
-        text-align: center;
-        font-size: 14px;
-        letter-spacing: -0.5px;
-        margin-bottom: 10px;
-      }
-
-      .credit-card {
-        max-width: 150px;
-        max-height: 94px;
-
-        img {
-          width: 100%;
-          height: 100%;
-        }
-      }
-    }
-  }
-
-  td.table-data-secondary {
-    .ttl-septenary {
-      font-size: 14px;
-      font-weight: 600;
-      margin-bottom: 20px;
-      letter-spacing: -1px;
-    }
-
-    .ttl-septenary.sub-content {
-      font-weight: 400;
-    }
-  }
-
-  td.table-data-terinary {
-    div {
-      text-align: center;
-      justify-content: center;
-      align-items: center;
-      font-size: 14px;
-      font-weight: 500;
-      text-align: center;
-
-      .ttl-septenary {
-        font-size: 14px;
-        font-weight: 600;
-        margin-bottom: 20px;
-        letter-spacing: -1px;
-      }
-
-      .ttl-septenary.sub-content {
-        font-weight: 400;
-        margin-bottom: 0;
-      }
-
-      .cat {
-        background-color: #F29600;
-        padding: 30px 0;
-        width: 100%;
-        border: 0;
-        border-radius: 10px;
-      }
-    }
-  }
-
-  td.table-data-terinary.no-padding-right {
-    padding-right: 0;
   }
 }
 
@@ -156,7 +37,7 @@
     max-width: 300px;
     max-height: 300px;
 
-    .card-img {
+    .credit-card-img {
       width: 100%;
       height: 100%;
     }
