--- a/app/pages/no12/index.njk
+++ b/app/pages/no12/index.njk
@@ -17,7 +17,7 @@
 {# Main content #}
 {% block content %}
 
-  <main class="quinary-page">
+  <main class="no12-page">
     <section class="section-welcome">
       <h3 class="ttl-tertiary">自分に合ったビジネスカードを。</h3>
 
