--- a/app/assets/scss/4-pages/_no12.scss
+++ b/app/assets/scss/4-pages/_no12.scss
@@ -34,6 +34,12 @@
       .containers {
         padding: 15px 0;
         background-color: #e1e1e1;
+
+        .anc01__box {
+          li {
+            max-width: 252px;
+          }
+        }
       }
     }
   }
