--- a/app/pages/no12/index.njk
+++ b/app/pages/no12/index.njk
@@ -23,7 +23,7 @@
 
       <h2 class="ttl-secondary">クレディセゾンのビジネスカード</h2>
 
-      <h4 class="quaternary">お客さまの活用シーンやニーズに合わせて、<br>
+      <h4 class="ttl-quaternary">お客さまの活用シーンやニーズに合わせて、<br>
         最適なビジネスカードをご用意しています。</h4>
     </section>
 
@@ -201,7 +201,7 @@
 
                   <td class="table-data-tertiary">
                     <div>
-                      <span class="cat">詳細</span>
+                      <a class="btn06">詳細</a>
                     </div>
                   </td>
                 </tr>
@@ -256,7 +256,7 @@
 
                   <td class="table-data-tertiary">
                     <div>
-                      <span class="cat">詳細</span>
+                      <a class="btn06">詳細</a>
                     </div>
                   </td>
                 </tr>
@@ -310,7 +310,7 @@
 
                   <td class="table-data-tertiary">
                     <div>
-                      <span class="cat">詳細</span>
+                      <a class="btn06">詳細</a>
                     </div>
                   </td>
                 </tr>
@@ -412,7 +412,7 @@
 
                   <td class="table-data-tertiary">
                     <div>
-                      <span class="cat">詳細</span>
+                      <a class="btn06">詳細</a>
                     </div>
                   </td>
                 </tr>
@@ -472,7 +472,7 @@
 
                   <td class="table-data-tertiary">
                     <div>
-                      <span class="cat">詳細</span>
+                      <a class="btn06">詳細</a>
                     </div>
                   </td>
                 </tr>
