--- a/app/pages/introduce/index.njk
+++ b/app/pages/introduce/index.njk
@@ -303,7 +303,9 @@
               <dd>経費清算クラウド「Concur Expense」は、法人カード、交通系ICカード（スイカ、パスモなど）、ホテル手配やタクシー配車アプリなど様々なサービスと連携。経費明細が自動で Concur Expense に取り込まれるので、ペーパーレス化はもちろん経費精算を自動化することができます。</dd>
 
               <div class="flex gap30 aiC sp-reverse">
-                <figure class="sec__img"><img src="/assets/img/introduce_page/concur-expense.png" alt=""></figure>
+                <div class="sec-left-wrapper">
+                  <figure class="sec__img"><img src="/assets/img/introduce_page/concur-expense.png" alt=""></figure>
+                </div>
 
                 <div class="gap-10 sec-right-wrapper">
                   <dl class="flex aiC gap30 sec01-right-box">
@@ -384,8 +386,10 @@
             <dd>セゾンインボイスとは、請求業務“すべて”を代行するサービスです。顧客を登録し、取引情報を入力するだけ。与信審査、請求書作成・発行、入金確認、督促まですべてクレディセゾンが代行いたします。顧客の与信枠内であれば、その後未払いになったとしても貴社に振込。未回収リスクがなくなります。</dd>
 
             <div class="flex gap50 aiC sp-reverse">
-              <figure class="sec__img"><img src="/assets/img/introduce_page/saison-invoice.png" alt=""></figure>
+              <div class="sec-left-wrapper">
+                <figure class="sec__img"><img src="/assets/img/introduce_page/saison-invoice.png" alt=""></figure>
 
+              </div>
               <div class="gap-10 sec-right-wrapper">
                 <dl class="flex aiC gap30 sec01-right-box">
                   <dt class="flex aiC gap20 sp-fS">
@@ -437,8 +441,10 @@
               1人あたり月額385円（税込）とお手頃な価格なので、はじめての福利厚生を導入する企業様でもお気軽に利用できますす。</dd>
 
             <div class="flex gap50 aiC sp-reverse">
-              <figure class="sec__img"><img src="/assets/img/introduce_page/saison-fukurico.png" alt=""></figure>
+              <div class="sec-left-wrapper">
 
+                <figure class="sec__img"><img src="/assets/img/introduce_page/saison-fukurico.png" alt=""></figure>
+              </div>
               <div class="gap-10 sec-right-wrapper">
                 <dl class="flex aiC gap30 sec01-right-box">
                   <dt class="flex aiC gap20 sp-fS">
@@ -510,8 +516,9 @@
               いたします。</dd>
 
             <div class="flex gap50 aiC sp-reverse">
-              <figure class="sec__img"><img src="/assets/img/introduce_page/cos-pro.png" alt=""></figure>
-
+              <div class="sec-left-wrapper">
+                <figure class="sec__img"><img src="/assets/img/introduce_page/cos-pro.png" alt=""></figure>
+              </div>
               <div class="gap-10 sec-right-wrapper">
                 <dl class="flex aiC gap30 sec01-right-box">
                   <dt class="flex aiC gap20 sp-fS">
