--- a/app/assets/scss/3-modules/_button.scss
+++ b/app/assets/scss/3-modules/_button.scss
@@ -258,6 +258,25 @@
     max-width: 85%;
     border: 2px solid #0d5bab;
   }
+  &.show-arrow {
+    &:before {
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      margin: auto;
+      right: 30px;
+      width: 8px;
+      height: 8px;
+      border-top: solid 3px #fff;
+      border-right: solid 3px #fff;
+      transform: rotate(45deg);
+      transition: all 0.3s;
+      @media #{$sp} {
+        right: 20px;
+      }
+    }
+  }
   &:hover {
     opacity: 1;
     background: #f29600;
@@ -296,7 +315,10 @@
   // 小さいボタン
   &.small {
     max-width: 330px;
-    padding: 10px;
+    padding: 10px 60px;
+    font-size: 14px;
+    display: inline-block;
+
     &:before {
       width: 6px;
       height: 6px;
