--- a/app/assets/scss/3-modules/_section.scss
+++ b/app/assets/scss/3-modules/_section.scss
@@ -1469,13 +1469,40 @@
     flex-wrap: nowrap;
     margin-bottom: 30px;
 
-    .sec__img {
-      max-width: 441px;
-      height: 281px;
+    .sec-left-wrapper {
+      max-width: 391px;
 
-      img {
-        width: 100%;
-        height: 100%;
+      .sec__img {
+        max-width: 441px;
+        max-height: 281px;
+        margin-bottom: 30px;
+
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+
+      .sec-collection {
+        .collection-item {
+          width: calc(100% / 3 - 20px);
+
+          .collection-item-content {
+            position: relative;
+
+            .collection-item-txt {
+              position: absolute;
+              color: black;
+              top: 50%;
+              width: 100%;
+              transform: translateY(-50%);
+              display: block;
+              text-align: center;
+              font-weight: bold;
+              font-size: 14px;
+            }
+          }
+        }
       }
     }
 
@@ -1693,7 +1720,7 @@
   }
 
   .card__right {
-    background-color: #E9E9E9;
+    background-color: #e9e9e9;
     padding: 10px 34px 10px 30px;
 
     .card-item-list {
@@ -2325,6 +2352,85 @@
   }
 }
 
+// Notification-panel3
+.notification-panel3 {
+  padding: 0;
+  background-color: #fff;
+  position: relative;
+
+  .card__ttl {
+    margin: auto;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -20px;
+    background-color: #000;
+    font-size: 16px;
+    color: #fff;
+    max-width: 480px;
+    padding: 7px 0 6px;
+    border-radius: 50px;
+    font-weight: bold;
+  }
+
+  .inquiry__box {
+    background-color: #e1e1e1;
+    padding: 36px 0 18px;
+    width: 100%;
+    margin: 0;
+    justify-content: flex-start;
+    margin-bottom: 30px;
+
+    .inquiry__box--btn {
+      width: auto;
+
+      .btn01 {
+        padding: 5px 35px;
+        background-color: #000;
+        border-color: #000;
+        font-size: 16px;
+        box-shadow: none;
+
+        &::before {
+          display: none;
+        }
+      }
+
+      &:hover {
+        .btn01 {
+          color: #fff;
+        }
+      }
+    }
+
+    .inquiry__box--txt {
+      margin: auto;
+      width: auto;
+
+      span {
+        color: #00aba0;
+      }
+    }
+  }
+
+  .card__box--txt {
+    font-size: 16px;
+    width: auto;
+    margin-bottom: 30px;
+    text-align: left;
+  }
+
+  .inquiry__box.inquiry__box_02 {
+    padding: 13px 0;
+    background-color: #00aba0;
+
+    .inquiry__box--txt {
+      color: #fff;
+      width: 100%;
+    }
+  }
+}
+
 // Table01
 .table01 {
   table {
@@ -2486,7 +2592,6 @@
 }
 
 // Sublist
-
 .sub-list {
   margin-top: 23px;
   list-style: none;
