change container to full width

--- a/app/_template/partial/header.njk
+++ b/app/_template/partial/header.njk
@@ -25,13 +25,20 @@
       </div>
     </div>
   </div>
+
+  {# this for temporarily prevent all.min.js error #}
+  <div class="show"></div>
+  <div class="hide"></div>
+  <div class="floating"></div>
+
   <div class="nav-list pc-only">
     <div class="nav-list-bar flex">
       <div class="nav-list-logo">
         <a href="#"><img src="/assets/img/logo/header-nav-list-logo.png"/>
         </a>
       </div>
-      <ul class="flex">
+
+      <ul class="container-1200 flex">
         <li>
           <a href="#">クレディセゾンの強み中小企業様向け</a>
         </li>
@@ -45,6 +52,7 @@
           <a href="#">導入事例</a>
         </li>
       </ul>
+
       <div class="nav-list-button">
         <a href="#">ご相談・お問合せ</a>
       </div>
