--- a/app/pages/no13/index.njk
+++ b/app/pages/no13/index.njk
@@ -17,8 +17,9 @@
 {# Main content #}
 {% block content %}
 
-  <main class="no13-page">
-    <section class="section-welcome">
+<main class="no13-page">
+  <section class="section-welcome">
+    <div class="container-1200">
       <h3 class="ttl-tertiary">様々な間接コストを削減！</h3>
 
       <h2 class="ttl-secondary">経費削減をサポートするサービス</h2>
@@ -27,9 +28,11 @@
         最適なビジネスカードをご用意しています</h4>
 
       <a href="#" class="btn05">経費削減につながるカードはこちら</a>
-    </section>
+    </div>
+  </section>
 
-    <section class="section-primary">
+  <section class="section-primary">
+    <div class="container-1200">
       <h2 class="ttl-secondary">ビジネスカードを持つだけで、<br>
         経費削減ができることをご存知ですか？</h2>
 
@@ -124,7 +127,8 @@
               アイコン
             </div>
 
-            <h5 class="ttl-senary">海外出張中の病気やケガを補償する海外傷害保険など自動付帯のカードを使用することで、手続きを省力化できるだげでなく、掛け捨て保険をなくす事でコスト削減につながります。</h5>
+            <h5 class="ttl-senary">海外出張中の病気やケガを補償する海外傷害保険など自動付帯のカードを使用することで、手続きを省力化できるだげでなく、掛け捨て保険をなくす事でコスト削減につながります。
+            </h5>
           </a>
         </li>
 
@@ -146,9 +150,11 @@
           </a>
         </li>
       </ul>
-    </section>
+    </div>
+  </section>
 
-    <section class="section-secondary">
+  <section class="section-secondary">
+    <div class="container-1200">
       <h3 class="ttl-tertiary">ビジネス規模で選ぶ</h3>
 
       <h2 class="ttl-secondary">ビジネスカード一覧</h2>
@@ -162,7 +168,8 @@
               <li class="flex card-item02 gap20">
                 <div class="flex gap20 card__box-wrapper">
                   <div class="credit-card02">
-                    <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image" class="credit-card-img">
+                    <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image"
+                      class="credit-card-img">
                   </div>
 
                   <div class="card__box-title">
@@ -187,7 +194,8 @@
               <li class="flex card-item02 gap20">
                 <div class="flex gap20 card__box-wrapper">
                   <div class="credit-card02">
-                    <img src="/assets/img/credit_cards/american-express-02.png" alt="Your Image" class="credit-card-img">
+                    <img src="/assets/img/credit_cards/american-express-02.png" alt="Your Image"
+                      class="credit-card-img">
                   </div>
 
                   <div class="card__box-title">
@@ -224,7 +232,8 @@
               <li class="flex card-item02 gap20">
                 <div class="flex gap20 card__box-wrapper">
                   <div class="credit-card02">
-                    <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image" class="credit-card-img">
+                    <img src="/assets/img/credit_cards/american-express-01.png" alt="Your Image"
+                      class="credit-card-img">
                   </div>
 
                   <div class="card__box-title">
@@ -314,26 +323,29 @@
           </div>
         </li>
       </ul>
-    </section>
+    </div>
+  </section>
 
-    <section class="section-tertiary">
+  <section class="section-tertiary">
+    <div class="container-1200">
       <h1 class="ttl-primary">「どのビジネスカードが迷っている・・・」という方へ</h1>
 
       <h3 class="ttl-tertiary">当社のサポート担当がご利用用途やご要望をお伺いさせて頂きお客さまにピッタリのカードをご提案致します。 お気軽にサポート担当にご相談下さい。<br>
         お気軽にサポート担当にご相談下さい。</h3>
 
       <a href="#" class="btn02">サポート担当に無料で相談する</a>
-    </section>
+    </div>
+  </section>
 
-    <section class="breadcrumb">
-      <ul class="flex">
-        <li>
-          <a href="#">TOP</a>
-        </li>
-        <li>
-          <a href="#">法人カード・ビジネスカードを作りたい</a>
-        </li>
-      </ul>
-    </section>
-  </main>
+  <section class="breadcrumb">
+    <ul class="flex">
+      <li>
+        <a href="#">TOP</a>
+      </li>
+      <li>
+        <a href="#">法人カード・ビジネスカードを作りたい</a>
+      </li>
+    </ul>
+  </section>
+</main>
 {% endblock %}
