--- a/app/_template/partial/footer.njk
+++ b/app/_template/partial/footer.njk
@@ -1,55 +1,56 @@
 <footer>
   <section class="primary-section">
-    <div class="containers flex">
+    <div class="container-1200">
+      <div class="containers flex">
 
-      <div class="group">
-        <div class="group__ttl">サービス</div>
+        <div class="group">
+          <div class="group__ttl">サービス</div>
 
-        <ul class="group__list">
-          <li>
-            <a href="/rosehip_polyphenol/">中小企業様向けサービス</a>
-          </li>
-          <li>
-            <a href="/cassis/">個人事業主様向けサービス</a>
-          </li>
-          <li>
-            <a href="/salacia/">よくある質問</a>
-          </li>
-          <li>
-            <a href="/salacia/">導入事例</a>
-          </li>
-          <li>
-            <a href="/salacia/">当社の強み</a>
-          </li>
-        </ul>
+          <ul class="group__list">
+            <li>
+              <a href="/rosehip_polyphenol/">中小企業様向けサービス</a>
+            </li>
+            <li>
+              <a href="/cassis/">個人事業主様向けサービス</a>
+            </li>
+            <li>
+              <a href="/salacia/">よくある質問</a>
+            </li>
+            <li>
+              <a href="/salacia/">導入事例</a>
+            </li>
+            <li>
+              <a href="/salacia/">当社の強み</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="group">
+          <div class="group__ttl">お問合せ</div>
+          <ul class="group__list">
+            <li>
+              <a href="/catalog/">サービス資料ダウンロード</a>
+            </li>
+            <li>
+              <a href="/contact/">お問合せ・ご相談</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="group">
+          <div class="group__ttl">その他</div>
+          <ul class="group__list">
+            <li>
+              <a href="/strength/">選ばれる理由</a>
+            </li>
+            <li>
+              <a href="/company/">企業情報</a>
+            </li>
+          </ul>
+        </div>
+
       </div>
-
-      <div class="group">
-        <div class="group__ttl">お問合せ</div>
-        <ul class="group__list">
-          <li>
-            <a href="/catalog/">サービス資料ダウンロード</a>
-          </li>
-          <li>
-            <a href="/contact/">お問合せ・ご相談</a>
-          </li>
-        </ul>
-      </div>
-
-      <div class="group">
-        <div class="group__ttl">その他</div>
-        <ul class="group__list">
-          <li>
-            <a href="/strength/">選ばれる理由</a>
-          </li>
-          <li>
-            <a href="/company/">企業情報</a>
-          </li>
-        </ul>
-      </div>
-
     </div>
-
   </section>
 
   <section class="secondary-section">
@@ -71,58 +72,60 @@
   </section>
 
   <section class="tertiary-section">
-    <div class="flex aiC gap50 sec-news__box--item">
-      <dt class="flex aiC gap20 sp-fS">
-        <img src="/assets/img/footer/footer-title.png"/>
-      </dt>
+    <div class="container-1200">
+      <div class="flex aiC gap50 sec-news__box--item">
+        <dt class="flex aiC gap20 sp-fS">
+          <img src="/assets/img/footer/footer-title.png"/>
+        </dt>
 
-      <ul class="flex custom-list gap20">
-        <li>会社概要
-          <div class="square-container">
+        <ul class="flex custom-list gap20">
+          <li>会社概要
+            <div class="square-container">
+              <div class="square before"></div>
+              <div class="square after"></div>
+            </div>
+          </li>
+
+          <li>プライバシーポリシー
             <div class="square before"></div>
             <div class="square after"></div>
-          </div>
-        </li>
+          </li>
 
-        <li>プライバシーポリシー
-          <div class="square before"></div>
-          <div class="square after"></div>
-        </li>
+          <li>「個人情報の保護に関する法律」に基づく公表事項
+            <div class="square-container">
+              <div class="square before"></div>
+              <div class="square after"></div>
+            </div>
+          </li>
 
-        <li>「個人情報の保護に関する法律」に基づく公表事項
-          <div class="square-container">
-            <div class="square before"></div>
-            <div class="square after"></div>
-          </div>
-        </li>
+          <li>cookieポリシー
+            <div class="square-container">
+              <div class="square before"></div>
+              <div class="square after"></div>
+            </div>
+          </li>
 
-        <li>cookieポリシー
-          <div class="square-container">
-            <div class="square before"></div>
-            <div class="square after"></div>
-          </div>
-        </li>
+          <li>サイトマップ
+            <div class="square-container">
+              <div class="square before"></div>
+              <div class="square after"></div>
+            </div>
+          </li>
+        </ul>
+      </div>
 
-        <li>サイトマップ
-          <div class="square-container">
-            <div class="square before"></div>
-            <div class="square after"></div>
-          </div>
-        </li>
-      </ul>
-    </div>
+      <div class="news-single__conts">
+        <p>貸金業者登録番号
+          <br>
+          関東財務局長（14）第00085号
+          <br>
+          日本貸金業協会会員 第002346号
+        </p>
+      </div>
 
-    <div class="news-single__conts">
-      <p>貸金業者登録番号
-        <br>
-        関東財務局長（14）第00085号
-        <br>
-        日本貸金業協会会員 第002346号
-      </p>
-    </div>
-
-    <div class="copy-right">
-      <p>Copyright(C)CREDIT SAISON Co.,Ltd.All Rights Reserved.</p>
+      <div class="copy-right">
+        <p>Copyright(C)CREDIT SAISON Co.,Ltd.All Rights Reserved.</p>
+      </div>
     </div>
   </div>
 </section>
